<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_sign_in_id"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >
        
        <TextView
            android:id="@+id/sign_up_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/email"
            android:textSize="19sp"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        
        <EditText
            android:id="@+id/sign_up_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email_text"
            />
    
    </android.support.constraint.ConstraintLayout>
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        
        <TextView
            android:id="@+id/sign_up_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/password"
            android:textSize="19sp"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        
        <EditText
            android:id="@+id/sign_up_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password_text"
            />
        
        <Button
            android:id="@+id/sign_up_eye_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        
        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="9.5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/password_visibility1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_visibility_black_24dp"
            app:layout_constraintEnd_toEndOf="@id/sign_up_password_input"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_password_text"
            />
    
    </android.support.constraint.ConstraintLayout>
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
    
    <TextView
        android:id="@+id/sign_up_password_rep_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/repeat_password"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    
    <EditText
        android:id="@+id/sign_up_password_rep_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_rep_text"
        />
    
    </android.support.constraint.ConstraintLayout>
    
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/sign_up_up_case"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <!--android:background="@drawable/blue_button_selector"-->
    
</LinearLayout>